Fixed layout issues after adding ordering system project.

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,7 +1,6 @@
 
 #projects {
     color: var(--white);
-    margin: 0 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,9 +10,11 @@
 .project {
     position: relative;
     display: flex;
+    margin: 0 15px 25px 15px;
     align-items: center;
     height: 150px;
-    margin-bottom: 25px;
+    max-width: 100vw;
+    flex-wrap: wrap;
 }
 
 .projects_header_title::before {
@@ -60,6 +61,7 @@
 .project_tags {
     margin-top: 4px;
     display: flex;
+    flex-wrap: wrap;
     gap: 5px;
 }
 
